Bug 35129 - Form spin button doesn't expose ROLE_SPIN_BUTTON to AT-SPI
Summary: Form spin button doesn't expose ROLE_SPIN_BUTTON to AT-SPI
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.3.0
Keywords: accessibility
Depends on:
Blocks: a11y-Linux
  Show dependency treegraph
 
Reported: 2011-03-08 20:58 UTC by Dattatray Bhat
Modified: 2021-09-02 19:30 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Accerciser screenshot: Spin Button exposes ROLE_PUSH_BUTTON to AT-SPI. (146.14 KB, image/png)
2011-03-08 20:58 UTC, Dattatray Bhat
Details
Sample doc with a form spin button (7.59 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-09-02 15:46 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dattatray Bhat 2011-03-08 20:58:59 UTC
Created attachment 44258 [details]
Accerciser screenshot: Spin Button exposes ROLE_PUSH_BUTTON to AT-SPI.

A spin button in Libre Office calc spreadsheet doesn't expose ROLE_SPIN_BUTTON to
AT-SPI. It exposes ROLE_PUSH_BUTTON. If it exposes the correct role viz.
ROLE_SPIN_BUTTON, assistive tools like a screen reader can use the information
to improve accessibility of the spreadsheet.

Steps to reproduce:
1. Start Libre Office calc. Create a new spreadsheet. Add a spin button. Turn Design Mode off. Save the spreadsheet.

2. Start Accerciser accessibility explorer.

3. Go to the accessible tree view at top left. As shown in attached screen-shot, select the accessible object corresponding to the spin button just created. The Role column shows 'push button'.

4. In the plug-in view at top right, select Interface Viewer. The first line
shows the role as 'push button'. though the name shown is Spin Button 1.

5. Go to the IPythonConsole at bottom. Command acc.getRole() returns the role
as ROLE_PUSH_BUTTON.
Comment 1 Björn Michaelsen 2011-12-23 11:47:18 UTC Comment hidden (obsolete)
Comment 2 Dattatray Bhat 2011-12-26 22:29:49 UTC
Today I rechecked my observation with Libre Office dev 3.5.0 beta2 and found
that the bug persists. I suggest that the bug be moved back to NEW status.
Comment 3 Florian Reisinger 2012-08-14 14:00:23 UTC Comment hidden (obsolete)
Comment 4 Florian Reisinger 2012-08-14 14:01:31 UTC Comment hidden (obsolete)
Comment 5 Florian Reisinger 2012-08-14 14:06:14 UTC Comment hidden (obsolete)
Comment 6 Florian Reisinger 2012-08-14 14:08:16 UTC Comment hidden (obsolete)
Comment 7 Joanmarie Diggs 2012-08-14 14:36:20 UTC
I don't know how I missed the bugmail, but this was never addressed.
Comment 8 Florian Reisinger 2012-08-15 12:35:55 UTC
Okay
Comment 9 Christophe Strobbe 2013-08-07 16:35:29 UTC
Corresponding Apache OpenOffice bug: https://issues.apache.org/ooo/show_bug.cgi?id=117274
Comment 10 QA Administrators 2015-04-01 14:42:35 UTC Comment hidden (obsolete)
Comment 11 Yousuf Philips (jay) (retired) 2016-09-07 18:10:42 UTC
This happens also in writer, so changing the component. Confirmed that it happens in both gtk2 and gtk3 builds of LO and doesnt happen on windows.
Comment 12 Xisco Faulí 2017-09-29 08:53:17 UTC Comment hidden (obsolete)
Comment 13 Alex ARNAUD 2017-10-03 12:53:29 UTC
Dear all,

I can reproduce this issue on LibreOfficeDev 6.0 of 2017-09-27 on Debian 8.9 "Jessie".

Best regards.
Comment 14 QA Administrators 2018-10-04 02:55:06 UTC Comment hidden (obsolete)
Comment 15 QA Administrators 2020-10-04 03:49:55 UTC Comment hidden (obsolete)
Comment 16 Michael Weghorn 2021-09-02 15:46:10 UTC
Created attachment 174740 [details]
Sample doc with a form spin button
Comment 17 Michael Weghorn 2021-09-02 15:47:19 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/121516
Comment 18 Commit Notification 2021-09-02 19:29:01 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/45e7e31f328ac572d4278ea94557d92cd99a1bd2

tdf#35129 a11y: Let SPINBUTTON have role SPIN_BOX, not PUSH_BUTTON

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.