tdf#35129 a11y: Let SPINBUTTON have role SPIN_BOX, not PUSH_BUTTON

Change-Id: I3aaac19890a356e930203ecdb003edfbfed1b52b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121516
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>